# CHiPPS-BLIS

./: .gitattributes  .travis.yml  Dependencies  INSTALL  INSTALL.md  Makefile.am  Makefile.in  README.md  appveyor.yml  blis.pc.in  configure  configure.ac
.ci/: .travis.pre
.coin-or/: Dependencies  config.yml  generate_readme  projDesc.xml
.github/workflows/: linux-ci.yml  windows-ci.yml
Blis/: Makefile.am  Makefile.in  README  blis.pc.in  configure  configure.ac
Blis/src/: Blis.h  BlisBranchObjectBilevel.cpp  BlisBranchObjectBilevel.h  BlisBranchObjectInt.cpp  BlisBranchObjectInt.h  BlisBranchStrategyBilevel.cpp  BlisBranchStrategyBilevel.h  BlisBranchStrategyMaxInf.cpp  BlisBranchStrategyMaxInf.h  BlisBranchStrategyPseudo.cpp  BlisBranchStrategyPseudo.h  BlisBranchStrategyRel.cpp  BlisBranchStrategyRel.h  BlisBranchStrategyStrong.cpp  BlisBranchStrategyStrong.h  BlisConGenerator.cpp  BlisConGenerator.h  BlisConfig.h  BlisConstraint.cpp  BlisConstraint.h  BlisHelp.cpp  BlisHelp.h  BlisHeurRound.cpp  BlisHeurRound.h  BlisHeuristic.h  BlisLicense.h  BlisMain.cpp  BlisMessage.cpp  BlisMessage.h  BlisModel.cpp  BlisModel.h  BlisNodeDesc.h  BlisObjectInt.cpp  BlisObjectInt.h  BlisParams.cpp  BlisParams.h  BlisPresolve.cpp  BlisPresolve.h  BlisPseudo.cpp  BlisPseudo.h  (+10 more)
Blis/test/: Makefile.am  Makefile.in
Doxygen/0.94/: BlisBranchObjectBilevel_8h.html  BlisBranchObjectBilevel_8h__incl.map  BlisBranchObjectBilevel_8h__incl.md5  BlisBranchObjectBilevel_8h_source.html  BlisBranchObjectInt_8h.html  BlisBranchObjectInt_8h__incl.map  BlisBranchObjectInt_8h__incl.md5  BlisBranchObjectInt_8h_source.html  BlisBranchStrategyBilevel_8h.html  BlisBranchStrategyBilevel_8h__incl.map  BlisBranchStrategyBilevel_8h__incl.md5  BlisBranchStrategyBilevel_8h_source.html  BlisBranchStrategyMaxInf_8h.html  BlisBranchStrategyMaxInf_8h__incl.map  BlisBranchStrategyMaxInf_8h__incl.md5  BlisBranchStrategyMaxInf_8h_source.html  BlisBranchStrategyPseudo_8h.html  BlisBranchStrategyPseudo_8h__incl.map  BlisBranchStrategyPseudo_8h__incl.md5  BlisBranchStrategyPseudo_8h_source.html  BlisBranchStrategyRel_8h.html  BlisBranchStrategyRel_8h__incl.map  BlisBranchStrategyRel_8h__incl.md5  BlisBranchStrategyRel_8h_source.html  BlisBranchStrategyStrong_8h.html  BlisBranchStrategyStrong_8h__incl.map  BlisBranchStrategyStrong_8h__incl.md5  BlisBranchStrategyStrong_8h_source.html  BlisConGenerator_8h.html  BlisConGenerator_8h__dep__incl.map  BlisConGenerator_8h__dep__incl.md5  BlisConGenerator_8h__incl.map  BlisConGenerator_8h__incl.md5  BlisConGenerator_8h_source.html  BlisConfig_8h.html  BlisConfig_8h__dep__incl.map  BlisConfig_8h__dep__incl.md5  BlisConfig_8h__incl.map  BlisConfig_8h__incl.md5  BlisConfig_8h_source.html  (+469 more)
Doxygen/0.94/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_12.js  defines_13.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+83 more)
examples/VRP/: Makefile.in
src/: Blis.h  BlisBranchObjectBilevel.cpp  BlisBranchObjectBilevel.h  BlisBranchObjectInt.h  BlisBranchStrategyBilevel.h  BlisBranchStrategyMaxInf.h  BlisBranchStrategyPseudo.cpp  BlisBranchStrategyPseudo.h  BlisBranchStrategyRel.h  BlisBranchStrategyStrong.h  BlisConGenerator.cpp  BlisConGenerator.h  BlisConfig.h  BlisConstraint.cpp  BlisConstraint.h  BlisHelp.cpp  BlisHelp.h  BlisHeurRound.cpp  BlisHeurRound.h  BlisHeuristic.h  BlisLicense.h  BlisMain.cpp  BlisMessage.cpp  BlisMessage.h  BlisModel.cpp  BlisModel.h  BlisNodeDesc.h  BlisObjectInt.cpp  BlisObjectInt.h  BlisParams.cpp  BlisParams.h  BlisPresolve.cpp  BlisPresolve.h  BlisPseudo.cpp  BlisPseudo.h  BlisSolution.h  BlisSubTree.h  BlisTreeNode.h  BlisVariable.h  Makefile.in  (+4 more)
test/: Makefile.in
trunk/Blis/: configure
trunk/Blis/src/: BlisModel.cpp  BlisModel.h  BlisTreeNode.h
